redesign: beautiful promo-landing page with navbar, sections rendering, share + fix card CTA

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -1124,7 +1124,7 @@
                                 ` : ''}
                             </div>
                             <div class="promo-cta">
-                                <a href="${card.ctaLink || '#'}" class="cta-btn" ${card.ctaLink ? 'target="_blank"' : ''}>
+                                <a href="${card.ctaLink || '#'}" class="cta-btn">
                                     ${card.ctaText || 'Scopri di più'}
                                 </a>
                             </div>
